--- a/public/bower.json
+++ b/public/bower.json
@@ -38,6 +38,7 @@
     "paper-fab": "polymerelements/paper-fab#^1.0.0",
     "platinum-sw": "polymerelements/platinum-sw#^1.3.0",
     "polymerfire": "firebase/polymerfire#~0.9.0",
-    "web-animations-js": "web-animations/web-animations-js#^2.2.1"
+    "web-animations-js": "web-animations/web-animations-js#^2.2.1",
+    "recordmp3js": "^0.5.0"
   }
 }
