--- a/public/bower.json
+++ b/public/bower.json
@@ -37,8 +37,8 @@
     "paper-icon-button": "polymerelements/paper-icon-button#^1.0.0",
     "paper-fab": "polymerelements/paper-fab#^1.0.0",
     "platinum-sw": "polymerelements/platinum-sw#^1.3.0",
-    "polymerfire": "firebase/polymerfire#~0.9.0",
     "web-animations-js": "web-animations/web-animations-js#^2.2.1",
-    "recordmp3js": "^0.5.0"
+    "recordmp3js": "^0.5.0",
+    "polymerfire": "https://github.com/tjmonsi/polymerfire.git"
   }
 }
